--- a/_posts/2019-06-23-480.html
+++ b/_posts/2019-06-23-480.html
@@ -3,9 +3,9 @@ layout: default
 title: June 23, 2019
 number: 480
 label1: American Pipit<br> Gothic, CO -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/pqIMAxVZdBo18VfkqcKk6nt2hoXL54upnHgidv0bkpXoP_Lv8RKx61ScOkQrh8chKQ4JhE5IQ0IwsGBP9xVsLLovEo6FYT1jMILahMDrkazIjQUwwmyF040XHh6a3tAbYUYW3mF0hq34kxKSCt8eIc3mzxbcnKfCzkr_UhMeLQoHMP8HsTIqesULFh1HfBkJxm1oReInDDGvSqVf7yt_JX4XpLfm1NyYnuUqsAQdJQTwEx5rK551iwDjY1JSj54b99o33OFJ_MzfNxPLqvi2ISUh-iApczZi3-0YqyOLfvI8t497neQe4UcRaYEmk7Udp-Ziz1qANcR7le6vJmI2XNTbTuNZXQh6EXU2jAcX2YENv7FQlYJZmFLjhK2JcIRGsuIhY_hNddZcot9A93kmN4F9FF7JxvTyJXLkipwLrfTdPFqoZSe5coplsuJP7HGSvstszvsE5L5lcHgAGZuuAYV-ejeuaHkSQk4dKigmgO_UKVJoO4nXVUU7a7zdDLqmcHRDtYnYJhI6lZkCii8rwrZgYOwdlrjqD-0acXROYUZVcWiDWMteCzAG_9cJjj5-4lHc2zSpHMvNmWm2rTliRh9ysbOFzX_pcO5F0SLBPN9a2nZa-sg1MwCS0PpGyx6WB1SJ402ybwg3utHVcW8aO4-mKFre01U=w733-h919-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/jTulorLIW2VAzQpqfX9cRvGl3mzchS1G0iRvfJiAm37I0zcymqLUoYGfJGHeKt1n_eyWHaE8_496zsJKJlnZkQmtpIa9qjaTW8W4VmJXhNNt7_WQ-Ot_-x84IsYTOzIQ_x6kUzwQiEQfIZNE7pkRYF-lfLBC8SgJg0w-Om5bL_hZovVxbUiUAGpaumNe7ysRjmuWgPgvz7Av6Xqn471C9OBWIxtpHMqMg5T5XETsYZQCrvUNMsYmT3h5PEGxHlxz37qBK5n2JVVr2W8umJ1vXjxsSeUvdNuFheZjh3h10a190oiTpw620_nuJ9zSsMtrzjSlcrt173f4JX5KrL_hOHTgmJCkU519y7ddCzT28pNrKsWWyfAXhoxeANwsgZt6-qPY1RjpP-BhKAqsNWAmz971ikdmGdWlq2mhdzQekwrX46yImr4pZigfQwEGUgtzNWM6Nr82_HjxNXdeDPjBYfmr6WSF8vObGeOuvCBbdOfX6h-hCtQMYGu5tLi2Pile9giMR1VUEdz6mqgCezpMNYSBtMJ2FlCBUN3ZEGBFCJhTuiZ07slWLTdKVBo575ueBZCYe1SvM4iqVx4WGBup2HcuW5_zQ_E2gSG5KTwKRD3YRrCm469IYYWhPwrR2C127AvJS_v0mdkkPQR_1fdroJYqRPvSWb-2Pzs4OothCUjKCWXgzoSUIisM_B3NG7lnCIa39zqqCJO2xVChMZgrIYNg=w778-h975-no
 mouse1: Providing soundtrack to the snow 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
