--- a/_posts/2019-06-24-481.html
+++ b/_posts/2019-06-24-481.html
@@ -3,9 +3,9 @@ layout: default
 title: June 24, 2019
 number: 481
 label1: Mallard<br> Denver, CO -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/muhvS15m14JEsiF0SQVSxdjyvEyw4PcuJoAomHW9rQfIyG28w9XqcwegRrnJ6sbGlA72pTxhDmOuf8wmEcWuroglrF2l3QuNnuh2exndD22SBoju9h4nLpyTZy6CTsbgujZmp3R6aX_DM6k2iED4PWwGuk8usodxfwKd5JpkUww-771TQk3f7rqCse_N7nUlZL_nLwmG9FHgbktB0b1Sbe3DTV9l1vLCCbfyVG26mVFSpShOLWPfrvgbOG_FXcYfJroDHnqVe7g5fAVIau97JV5yXQrZyTa5pXs8o71a8YeSByKPs6b8RRHA10YPzKLgFwsdJi117sNlrhKwV4W_UGokF9f0GJTKrbDWDv_WRtaLkXP_RhylIQLoqLyaazyBXESRUippijtaVgLmXsSfQwPfNWheHljcJgJDCw6oual3OOem2SsnwYu-VRuo3RzGt-T4aOmu9myCHIDt0zJJLx8e6XqgHJCXfydAHFb-00hWl-bsrCvJ-SxWWCYNRcmJ1eJNcmzBbDZTDsyInLbwWj6iTeBw7Or1u_QNf2-3g2QQJQoRJD3H7yJKSsXOpci7vEC2XabtpY5Du3ZpMManMXgJiqRhe944zV9UJf4UrsuBNZ9oLJFKTndw2WaPImSt25A78yIqZpsayIsoeX5QoK-LusL6fSY=w806-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/KBJnCb2-OtSkb6UNitHcGrtcDq7U9piyoNov5yPRrEN4PLeAxX1ugd6Cq5qlClQvNda4b0d4JZ8SVTLghEIPclx8GDcXPUyyORe7ln0z-dzthb_fkrDc2UUqL9AOa30QPsJPmZTctOyqDjj2Ejo6cFxn5e0GyVUkbF3VUhW80PAAVs5BN0tVkBh5LFN29o81eyL0gdFp3dFBJ_6AzKgXlVDHI6DTmcpSg5TCWJUNwdmdLJg5dD7sAcekz7bObmO291tMcwIh7aBcd5w4LCYQaXWhk6ThQt0q06wPplLYLTK5DvXXTMLbnMRzYDaE4_Cfcj2o1RvQaC-6H_hox5OIoIqibouR818yiaA-kppZNKoa3jQPrYz10d7HDRlNZqc3M2M7blDWpDxxoBEf_tmy6MyJoR9HgO8kiE2TcDBeiCz6wkD4JQRihoUwMC9yP_K7-BCvPnRNOrnZmkkZs9FR3KswUI4qJDJQ3wdsdoHWi5VPHWdurT3un5IdsKzW7xjqsXy81NB7ESkGVeQA6AaW2IHh0Jq-mJVNVs07MUzvJ8_tPIyWVDZLA9tf37fKtc7yKFYd-oerd7nHfLZorJCzXiLxv0upy68mkoUFt_JSbEXqb04owQQy_taL1jxOFpYXuKdg6apPArrHTyVhh5g9peAKXdMnKy6cZHOhZ58VkkCF_aBf8F02aNJKnY1DZeWuTWhXmMn6GA5Zkx7LmiXpbRwb=w857-h976-no
 mouse1: Beauty in brown 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
