--- a/_posts/2019-06-26-483.html
+++ b/_posts/2019-06-26-483.html
@@ -3,9 +3,9 @@ layout: default
 title: June 26, 2019
 number: 483
 label1: Vancouver skyline<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/8L-am9QV6CdJ_TPZDEppmr0084pI6sRGTLOMcsHUh-UmRHghKBzf6fOTKKKEDgwlsRwTk_VZxVpa8HS8AMtblalscknRZG0zLtVALosz6DObcf_3L0fzHYuiQxVR9_wQIGXoVEs6YsXPgqPtPBioYItIK6YHOK9wI1IsyrG7OT-UGRAn9WSa2QhVywDYqef1FlRsI9jz6ATPpkoSmQdeBK-69TQkXghs_ofLsq9HmJzyxMFbPgAexssPAwUCqdGrzoUPf07CON3XpJ3GvkF-5gEc4XJ9L5Lu8QhT8J0RJNU7c2KiA3eCkiGtR3REAkJYV_jLvdE8_4yvSwoVRq_Cbbi9af9GPDAPy3pfandL1Mo0IDKv5EAM50RyijFeDNIUeWNGfmAoWn9ZA7FLYQdigUjSkXZ-Ua53GRPwYEMzPWCVjSYfBgMAqaDIqQJDR0GDkDjsdKP70r0MqF6Tw38qXoYDl3dMQQbX11-KwKORsTlPLTgCnqrsMvnD_SwtGBfWXtFTueznO-R-dWe7oQBeAZWlBqzUgCgHs2j4a6gLZoQSJukwB0Wxxredmp3KZoODUPaQAA7Fg02nq3bqzkI4tpMG7nbUHS_miwahimAC_3_m6lGtigoM-ZttRj8tpbq5D_iVGCC5jKT--yv7ttDaxoDFnl5MKNo=w959-h824-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/QcotWuWGxem7oZkLh1l-5NWqFSETtEr4vHhEt2kd5zmByhnpbvIB-6JRhb4MOG2Dmf63qUYBkIGkM82QSiCZ6o7ay6gsZaZ4iX-D_dP7IdIL4MRudwjabN-OCuosg9Y_IjhlgyOx0Rn2dJibmelLlDWjH40pzzyscw9ZcG_W9p1PcSHWnw_AVAh85tKILpmlp0622acXjhOANRVoY2a51pJeCcnWbutPKbOi6EZT3Tlsrw2GAyp2rmisE6UhCoSBHvC7swdzNpznmb9LqzPU3-RptvoS5tuk3o_yyxKj16f-d-Z2cYlOmZxEOh5w7rJ_TNyxqKpXG82Qj-O4MXF41UV7ZOriSyN9AhfTISk0rwf_WIzUKPSBsXzFEJBYpf8iur65g9U0M_XvL9R1j7qnSNz8CDX9CgHj0rkhieD6ttIo37L_m4tI-5jN4f9QKOeeLA2lOlu5Hvjbh4Mb2i3UYV3VMuLL_C5r7RPS4-g78CjvHFLYI8LntPGyREFXMXut50eqEfp9MoVmor6UjY9PciKVFkCsJfMkILStxpO4a_6ZovRozygx8h3e_mkMQOvQvv1Ujb3-6l-C9Pjn_DMSvqNuCc7Owex2bsy3YVitUkQFWNcKretVB4bnZOyr3RGEU-nqLOl9dgWywMwUIpUzzvrxrQvOYHUFNngAxVmf9gIVyK_7XLEj2HQ1g8f6ZLAhURHOZx7R2sjBu8dHKHVVdd2E=w1135-h975-no
 mouse1: Dark skies emphasize the brightness of the city 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
