--- a/_posts/2019-06-27-484.html
+++ b/_posts/2019-06-27-484.html
@@ -3,9 +3,9 @@ layout: default
 title: June 27, 2019
 number: 484
 label1: Mockorage<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/Q77AADy7gbNoHAj-mn2xMiLvIX_gbAUUT0b17CXiv3PUB5a4sHMBjCBXgvlyPkib4xWDTFKrdjG9h8GmoUWrz8WP4E_JmlURRWOYXJyIrJ9MFqgNZ8vrJ2IquR1fRisL0Wd-EEcsJBhf7_-gEv4tCbx2NvmGTuZrLoH84LtYS7RmtTYO6_GPrbpacsa_exsr5n95kR-8sWopEDRV7Gy6egyy2xBw6_v4_YECfHvl179dqXu51vlr3d66hXlUz5U_WkTo8ULTorE9O-lfiTLpVY2KDsO7FcC8PMNsngoTvbQOH7xB2hPQQSIaxMb1jVLWoeLez9tCLYxe7Qq0QFv-SvZswudO7m4SeW_eIxy336cEv7_entOdfUYezjAn2sMlo6Gy9VklVV9at3niLC2bb6r3fomtOTLwWym8jUy68zd6KRJZkqCQE_KrTYCQpLr640-SBvMM09smkDzYYyCldZElw16D5hp0u-8BzsaVN5lI0qnGo8pc3YrF4FKy4MOfAOVLh2tmL075xRgkxoxeFniTxBA-FCgZl_Isgqe3IG-M_E_j6vsWTzzJAH3NCd5pmPqvZ1eVYyTPHBJPDnipuuMcHzwlpjXMl163epkh_Haa2j6g91BadfRlDsHNm93-eBGWOUGfwuqKxZlRXpFcVhidZj5hCFI=w891-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/xiMY_dmkUuKDvxhaphRntEg_uzBR3eMOBY8eo6-M8Nwf-2b2-F_tWOI9bB_wLAjE3p1qy4Z4o-64615M7Z9T721q7EemlxNeHYzLSK52K3XbLTCSCZEMLcgPbop--GhauTWtITt-cajAosiNRR3D5gSQnRcZefJ3tIMw4pcfq3yjUFcOWudSRdb2aGeNJd1cBvJHB2wA4ZGidPdbdoT4Pqqe5JqKKi-jNobT_E9XBXMLGYcYjnn_U9ppE7rVlv3TRM9VCuWAvGrFoKR4NNsRW0H8EzXeW5uT1PJKYPjmuhAzGXICiU9FnUEiPom_4yqsP2XmstRe_QcJrZrKM_5IqLk2WxyeAOrJI4dsgoJuOrPZz4H6TeD8BMVfpmLvozHf1-Uc0Lze5Bq_D5DS0A6WdzzfExLqqp-cHdA24eEy6xxwef9KfIEnyOas-8jf4lJryTA15qPXXjKC7TnlJgJfqobx-0InmwQv6Me95lhfs9GdyW881aI6IIS4GOUqkAwWTF4y00_sn2C87ajKJ0wkwj0JGVYOohAAacO7BwdV56dhc0Kqr2D8JopJ3hBOIy7Y89pIDwzVk-8boNEq5Rivppk3-31BHKO8nBKNZgY8gLnv6Hiuxl5Jsq6XJ4jbdFDEmLqJEklGAl8030Oq0ErgLRqK1ubZB623PlseBL2mno9r4IOBdhmH5KIRr6qYSBIlQcSF8_nwIoGHaw7j1BOryzT7=w947-h975-no
 mouse1: I've never notcied the difference in sepal number before
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
