--- a/_posts/2019-06-28-485.html
+++ b/_posts/2019-06-28-485.html
@@ -3,9 +3,9 @@ layout: default
 title: June 28, 2019
 number: 485
 label1: American Elm<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/YAvIe86CYjVdnL9txrr-52i-8UCnLdlifnzVlzHkQ4v_cMq93HT7TPcTco3xUs1GXXoKG8IsfktYHFxByzcgzLZ1A0zWDGuQ-wqqw3K3Rl1iREilIFpc3utJke4f_wzdlciDSa5BX69QC0VVl_Wm7vTzvJ9GNvEfJ7MZ_fqcKw7y6ZdogQtc9ivxhOmaSGiIitxUjxp7wrXu2r-nSF8XP7hMT5bl-E9a9E67ZNXQ2dCVDKIgCPP5xZ_PRIa9k7zsKtUtwuSwzfErwc_Y7RqbJ4kS1zcOkz1dGD6Rw7-e70uonId4Lxn7hqI0ZAHKFANEx-W2oFqyuwcdIAx_X-PoCNLx_jk69R4dqPNm0VkhiJ1a4dxkLJVmjOvmpPEylujlH90B7Abgane4Ashw5ZKS6noZfbG9ZemHeUFNSg-4eoB7kIQaDX3LWH3JPdpl--o3B58ykqUFw6GFI7ygEqkkKoIB6Ge-1k_EwB2yKgdwhoqIWvsksLFDHms-mIAzeoF-m5iFaUJ5b9rZ_ECnASfkolfLxxbkpZM53l7kct4u-YEmYrouSBhPhN9XeQ50Q-CHD5qTwyT45WvzEpVqXoIy4ur5Scfq0Uz5C8Y-7mT0hk7HgNUkrl2Eb-ZTvPjdYlDxa0REgq4GP0qjTa2q-VOCvjJPcXyxOpo=w878-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/5afH1qup24UA1sa2dUYUEGFWJO45QDFYV26FtabRB6P7rs9m_hKDHndw5brsaLzrClZXybN9PHuHuq2R1DpOq3RgHkG4G_Cb21DVEO7p8olduWS76Gn5IFWyeJfHIFfVreaqYcaV0vTpXkgVg_mJstgUvGk98u7A6T2M9PgTusKCqYOpn6aGuKxuHwVBEJYAVHsHfptabHMZ16uXXWVc6wWqd6T4-YRydOKdPXpV3L21ZAtTvrMX3l1-uWkETMi-tNTKY1LzLBvLR_n04KXBnXuX3VIX8GGFuSaBf74ntVF1muVLYQ3JBZITbu9Y83OR76F-QuZddlox0sjnZb6U2VLlHoXvpsLTtIOE94WiW1gquOzoLEClZ73SBLxQa6rU0sva-OxbEASVjVJGhX89cQUJDIFe4B2_kpWyRhd6cRVNPl1CaFg6R3yp9sw_QrhnAMMTVOFDeA-smyNPrexEHDPw41kOXaX7HoGrak6GTlDEkdGxZfD64EJYKjOA9aWkdryx0hSMPRVPzhgJnFouqZFQnKyu3pQZ_G8GOzBVzxTsU9W_PY77_5EuQtR6zlbmr09D4w2PlzjyOAsA1t9awGMDcYwGxtgZUdFdiupy6HNCTUqLNBA2Ybyc99I8joaaPX7F0-u3jZHG2Yu6aN7PAWC7r450nZq6XDXtyPkR7-YxTH4wSi60cv7UrcvkpAskIgdcsB3SbSkP-uCE1Iiil5jT=w933-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
