--- a/_posts/2019-06-29-486.html
+++ b/_posts/2019-06-29-486.html
@@ -3,9 +3,9 @@ layout: default
 title: June 29, 2019
 number: 486
 label1: Crab (leg) <br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/CHR5poq97seHwoyMUdn0hbwuCeEi0HjJX8UgkrZViWzsHDV3Vqby1000nPwJuY67Z8w60bjMOpdQ2VGQBkrs3j96e31mmwA99TknvOCnY_WEQyNrASbG-IW_KqgqQ0j-DWlaR9PkRrqK05x-hgdlK4Xd8wKuqUyoURGfah5cql1aO984VO9qsMO4mhj_t_BdMNRgGTJX7A6IBpQNXBpO9mUozNeLjg554zoaV6vvMaI2QQjbOn2SWQLht5BVqhVo8T-8-cxpHuT0lb9IikejtMHSkEpEKO_GjpjKIaYUkxio76mrGQrkhAmuTn1DILU4i_C252rQlDDA88wFhIztNJGFFZ6Q3-bNlSeDmRwVYdx5nsmLkbBDBER4ZxQHl429l5TtF4UN1Ysgm_6jWR5TOh-ehVuIw1qt5xyo8-VUPXuwYHBE_QVSUEW8g8fdUcy7HqGGGSLFgkMdNZj9Gq3YT5eQ6V2VVPZf62M-SUYAEwyzJMt1bgRMDovKvIxGAASh1WORmv8ZCNxAOdi-MKH7C92cQIcVb5Dly2hq-nEXVZxnjfabuQv6KJcIr5FrT6V0gG9FU5duratiTDFinTvivDkMsxFCMDeRotcXnJIBkvVt5IJ2A_uflWbFYMqeBkHFM4Yv14K65nNbEaz_xOtOtYN87Bv7zFw=w885-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/u9wKik5W9vmhOHH6cO48X7jDHNQJsoHCyP92rLhkzhTg1mpLjLwgVT1q4jEyfmRODGSw98stkCEAZrMGYvlPVMU_KfciLKMnIWcxZqlO08L5lLKpsqqB4nD45Crx7B6ftMPdkdeNccd4o1VBoVKh2smc4N5u9orT-fYIS0Xebgkij2f90nrBvGwSuKktKj3A7A6bOaa35gZC8y5kWmF34Kcfwy4JekGPPrf2S0-qjoYFZfFk3peg4GOn1yg27c9LoXp_0w7XHOupjmghQaem9NhYmS4pWLQmknN3-NtRVkCLw8hem2TTyLSKw5o9Eqb0wW5L-z2bAlKmnXBxZ5-pFgGLxz8jOL7zawBfzi6wYcBPW8Vn4wZplX21K7qCgejVNheVM0ueZll21JaSZCHMXcEfscjz6na02fxIVEBsQoJQM1RINsCY22ZqFwHY4FXexlV5d-T_3wXgx3i0dy5ysonqVvQ0KTvGcGuS5ha0fd7y23e9QHFxCJ6vCMZae2El6iq4pT37X_czgB1jRS1y_4xFAVCYq6CsG1bahOgSjVbWsSrWs_5VOmtmOUGDTIkvb_jlqJd7cJyJEB1kbm_Zf7ymRna9ti79dN1oEXUJvE8IPgZzUicE2vge8HoLLQ-KgQDpq00phB_OJnkDt_R0FUMq_LTaTxtSL-mcslDGxXj4GVM1LBD461aaCBxWALJeIuFwAOgMzVHIwGxDTSx9n8YZ=w939-h976-no
 mouse1: Legs bedeck the beaches 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
