--- a/_posts/2019-06-30-487.html
+++ b/_posts/2019-06-30-487.html
@@ -3,9 +3,9 @@ layout: default
 title: June 30, 2019
 number: 487
 label1: Shell (broken)<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/SYvLyeVZralE4Gq721CF_bVRJ4TgyhmJBCsXyjniciBUw5-13xYbt4_wGmVVID_5WJ8rp_Pj5UhoRLQA6QSaQActdBT27PxFRqbkJh44n1jAQninyfSq6vY0g8ZHfum7DfS7cr_kxrDz4DJay1cykZVIn-KPpACh8g2On-M6MejDAN0NXG6Eq7DA1OOoXtFHNIdQDEgaIWzR30l4Dp0t3cJm7w6k7COwQWrUVixfX8qYNcXfqt9un_9LYNYCac57LuVjfw0C6FNIhr4CPjxgs1YtF9yQ2O-E4pTYzlaf8gVcvjaCLjQh5XYuEr2sVxcoBaaapBQ0Nx9OfANaRAr8O4blzlHqBpPkFkFaXG6mPgieQyWv_Jxborp6z54k10Dg4PCAsDMt5jKP63jEIaSC-eshQDNNQGdpUHPRkyIdGuOaqC_8RUQNHiqzOgi-wkBGwIR_PI12KeR4KST9RTkEmXsZzSURZ_oeUQ95LhwSP5AqEXMvk6Zqe6pCGZRlkCVSWQQKBDBJfN8yXdasQtxosvgd6yD2vagje7f9-vweXYK1qWbhANrCqeL9CiFdEYlKSQ-BZ-UJDWedzmtv_P0WF356I4uZ5eELKXfWKl--luglUKMf-68GGFaTgak3U3iycx7z86xeXfluBnZSJQXcoSGNE2UWGhc=w958-h871-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/QcotWuWGxem7oZkLh1l-5NWqFSETtEr4vHhEt2kd5zmByhnpbvIB-6JRhb4MOG2Dmf63qUYBkIGkM82QSiCZ6o7ay6gsZaZ4iX-D_dP7IdIL4MRudwjabN-OCuosg9Y_IjhlgyOx0Rn2dJibmelLlDWjH40pzzyscw9ZcG_W9p1PcSHWnw_AVAh85tKILpmlp0622acXjhOANRVoY2a51pJeCcnWbutPKbOi6EZT3Tlsrw2GAyp2rmisE6UhCoSBHvC7swdzNpznmb9LqzPU3-RptvoS5tuk3o_yyxKj16f-d-Z2cYlOmZxEOh5w7rJ_TNyxqKpXG82Qj-O4MXF41UV7ZOriSyN9AhfTISk0rwf_WIzUKPSBsXzFEJBYpf8iur65g9U0M_XvL9R1j7qnSNz8CDX9CgHj0rkhieD6ttIo37L_m4tI-5jN4f9QKOeeLA2lOlu5Hvjbh4Mb2i3UYV3VMuLL_C5r7RPS4-g78CjvHFLYI8LntPGyREFXMXut50eqEfp9MoVmor6UjY9PciKVFkCsJfMkILStxpO4a_6ZovRozygx8h3e_mkMQOvQvv1Ujb3-6l-C9Pjn_DMSvqNuCc7Owex2bsy3YVitUkQFWNcKretVB4bnZOyr3RGEU-nqLOl9dgWywMwUIpUzzvrxrQvOYHUFNngAxVmf9gIVyK_7XLEj2HQ1g8f6ZLAhURHOZx7R2sjBu8dHKHVVdd2E=w1135-h975-no
 mouse1: Beaches are places of growth, and destruction
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
