--- a/_posts/2019-07-01-488.html
+++ b/_posts/2019-07-01-488.html
@@ -3,9 +3,9 @@ layout: default
 title: July 01, 2019
 number: 488
 label1: Vancouver sunset<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/HEMzFPd6WqQjVDj0d7Eu-f6sAh7uL8TapNlLS5Fxj2KvE0uJiMQDeFxmU-Ss7iN0KWELqLDFxEgkb4zEms6rDdVclx0JFDsnu6XIoTD5tyqYCQuewmfrENlWEDNW7IIuwzMxFUgds1lPJQbukS9IZfP08Fqn8FpUReMVd7gLJragoqkl9Oq1H_XBz6VcAAVFfZ9fP5QbBUj8gtOrkicbysUqRStsuTqrd_IckmgAzJ3YCJ1ZgiPrajw3wLra0EMA1AQPX1d3LeWxpjenLGJxJWmEvavnzrEoGxwLaYNKme2e9ZFtKKXpUWr1IgFV3ZoBC4p_fMmL73q9tIoJnzSKUGPu60tJt_LLMUzQwupTyWOlX4DMXuHi2RIZrA1XIOZKjlElqOxs752T5ITaezNIn6GIGF4P2bJcgUzs4TyvosKaCeK2-aQ4xJ78K_D2rJWlhfMA7Z_CXt9uypP736H5ucgXF0zIj1w1AP4hGxVXjFAVWLVfPoU9qkb7N296dX5ZwRpsGBa2zuSYC8TP0Ku_OzIt3jQslqqTxPAbdyk3KOdkEM3H9KsZ_QArw86HSr_yaayaxSPgE4-_Ikk0gvj5C1hw0R3L2djNyw7AcC3r_r7Zsb-tfKLIMCARAN90CkJYnVHR9MgWln88kxG62Jjbf6o_5Og7lV4=w689-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/-A1QPa9X1mwoZcWrxGOuRrucTNA8T5sSQpm4y-mxicZRkwcFpwbUAP5G0SFYt9PpKcJ8b3GBdWqGRClhhJy4Ki1q4Kzo9agrMAI5vK0SvsxfrfGB0o2dhWfHnUUj5S_V4zhSEqKC5x4-oD6aHpVBMJ36Lq2oUJq4fXnQ_uhPaKaqOg3FaJ-AQBBQVoH5EN-bK8w7VEflEHZ2YFMKpK_LTiP2V4XCiGx0d_lUVEJkDq9UMXgaIyxTHTpM5N-qDPfmLbq2UaYwodB62FBLG7SSylx8jRERWr_4NydbJmRs1eNLsO4QT0IRq8JXGfCf_aVlXZdFQmgu5rw6gM_8qBMEgw9HoYiAM25Wf0tF_jhT7Hpm-Dyg5yVw0wC0W5dhmpUozh0fAqRpZ22kYqDEgN4CnJqo_RDj0ATcop2HEqum2YYOYK3yV1PfMz0qHYrOBZwIYRIfOOizichIwMHcyHHdR5YqmBcLIobvP5UMm9l0CA-9aygc-vnJMvxteRx-eD_EsduQYy0oPyRP31-MOJcym0ZEEfJJp9JLcZJ-uuJIT9eh8_q9iEUX5oq0uZUSo3sxWOZBr0ObjA1lQ6m05svybh0j2Ofsh8SxoarVfB38ug6C6235erR5onBx-2g1tRJzBzi8tXwdO3gG3fdB6kBEYaXCXwVRbi67-H-j7lraoWoCCJq4kwsUPWtjYP2PyG-Xkb2hYRFMdUgzUy-YvgnMZjFI=w732-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
