--- a/_posts/2019-07-03-490.html
+++ b/_posts/2019-07-03-490.html
@@ -3,9 +3,9 @@ layout: default
 title: July 03, 2019
 number: 490
 label1: Bladderwrack<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/JRjGNdfntmPsVRoARSEedsq6ojjDozFsPNfW7ts5yR25grKIqmqFPNNG0EgP_BcoJSF0NU8TJuDasc4TujzcO76F4wFMqw_RasVTySN47M_rCkp-jO3yWLtPSubtX0Bni2G1hV5qFut9W_kNbGCE9eUUhFxVJp-xC46T-iTdMSZmSeEW1XqmYzvpoqFde6jBULBd7tfkibPTalMz_Z8y5AmTWcLkwS6wZkQCzdRVKkmfkBqeAy4IMGPFY7YOrI_sVCeb66MfmuUOfQBU7qQ2KgFZjpIEqeUt8uRQGb4CRvUBcZl3cmmRD5E7cQ-j9MQsv_IKzjZk627Lv8AuofELIDcPMM-0z9qdjA1iGNwJGtWA1VhBwBZAMtMF7KCYmdMcFGeMeYdKp-j27-L5A2s0PBXVpF9sutUl-YJwuEolxQGEbWDL4ZdLf1kzMyNU4Ka2zwJZ4OX-VcedfLs_TlqvmnVW5sYkY1wjBcUiU3QWjXag-npJonMm_TKy2GduSCJWI7eE9SS2shZSa-Op_5ABFvPlXtHJAz5AHWuwOnnaHVK-1pOD1IOK7lAe3o60GBhbP15qE_4A0B1qFZVW9egaUwoKQqymd3TU2jm2RKBjYx1TrV6fbKPBJHS16B2rTfWC3CxY5LUHZJaXpWJLNMw09kODyRk2Vrk=w731-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/EaUYusfDUcbVWHxeaQzbi4b2fj5lreaBvx_b0010ax0hlq1Q3JH4BgvAmqbBzo9ZAv75XHN-LgAsBLU9KQt72LKjnOqGlC7eokO6WKHaNEN9KxtZ-9Bn4MOyQ-CydrVg-LBEli4z3vEEsuCczMyJ1_p9SEc6QloHhDJ017ESU_nnG-DtBkG6aqLrTwYichFgquzPzV8cKbnObPhL-xzxG4bqU_tL-2F0SXyhgG4PXLDsaAFgb3n9aadoVzPrR0rLLo5IZPAtT4AWDdVZmqJvl4rzJrbdJYgonQMfCZin88FgV2qJfaRG4G47laZ77lsDxOS3BDDURMLwqrbeQyRxJqiLXRG5MzHgdRVFNAwkVpwmvTabjq-pHfB_LXKgI9ma-PTSFXurTYi8DV6gwfeCldA0Vw5X-uQXaKpFUHPlLYNs7RPfXK_gNVkWWtG-MvMt_85W4Od6dmsVnZbIzF3dgfCG3CHZBK7HzxP2G8miweHKETc7A7TbmPauo7U7N5mClomjlM34DzzwT09PLwqzSIUEVpaH1zoe-YUmyFVrZGdst7Xb80guKrEGQYH5FeQfGpBiLbaLPlnt1KezE48dX9wvFchGb2D0EzYcOoGg4lAQzEXOd-Lsl6v0jMN-cTWrXkfJoLntpXj5JDszBvFIij0umX3xlZyDPHqpcQmMPhcHcA4KjpLKqmbfPeNXk9ahCgN6GhYu69wk_lZ5M_RMla49=w777-h975-no
 mouse1: Dying upon the drying beach 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
