--- a/_posts/2019-07-04-491.html
+++ b/_posts/2019-07-04-491.html
@@ -3,9 +3,9 @@ layout: default
 title: July 04, 2019
 number: 491
 label1: American Robin<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/AsfpAHff__tlJeA6tanerBsLs2CucS4EfVPtD3UWobY3jq-FGir9UEmmX0PbQkhLRlZfFy2uTDbyAt-L_ATmXnilhvyYYEQ2OPWnBK3li9Nt6aYbsLoSeC0bQFMV3rikbDKdoDQV0K8T3ZQMdw5OtoS9k4zjlebQaLiFV2wup7RFgjtej5qU0_vuu-Lm9oMrkIXDYPrTHpSHSC_j_zYHbq_sL_AJ1n3udd3QwwrPAo1HlkUuOzLXFeSzwKIhyj-xgCXWYl7Sdvb7K9x_2z2OkmUo1PWphWZ8DGWh7Wt6VczyKBI2-BoXlmJR12Yzd7KhGeFufWZJe2hAc9QjL8cM7WvqCc2ZWAPJVVyzcRxbsjxQLFW3Et1HQMea1A7hvbigWCMUR2Xun8KuM3WBTtnIXPO6lJVMRsNNv1LM_UI96Lqst5c2tLx1x_7UR1DNrjJwzGdwmAErTSbccji_-QUYEq56MARSfHkZBHfU95STjaup-9qyHrY-isBAvAHcyDdDK3ZfrwE5meC1zziVwL5e6NYInncg4JQRPDwOqkz-bZStQObCZ3ODyFpgOHbp1vd6QWicpfa2oWTkjnPwI04YK7q2h20WaG-g5y9F2uYRU1PxrzAtqU8KTn9M_GkEqvB9cJbHY85fwKTCX2La6ZiQ4KHJKqWa54s=w899-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/2_HT8kQgl4ihuGMxSdTg4KWR3gvilKKo5ypgngdvpe6OUtTSEqPhvrR2ycqMe7wZTpZMGxLtQozBoy5FIBsbpGYThC_5bp0CIse3iLnyiIpQu0cMjvpVE6kbwEFzc64VFc3X54djOhDlfjcMMi8jVe7L1NK9hHkCHvUeZP_8c3u8_CsITn4YzbWp3HeChcNedP47KChXdntRTJVT7MOJmIOeoVPoxXG-xwukkBxAhMNWjVonIFYVjY9LBsBKJGPxzwEoOh3gxYR5DXKTAY0RueZO_C6nIbZObuxXyQrgeGXpr1ln2B_86J8QJae3_qJJCn-a15N-rlJNdEA_6610TWPNGcMpluiUBRc8XWL8JFFZGCjGTSZ8SoFGgH_GEmMsfSWoUorZx71VO6HC0w8rInQH8MHLRIvkhjP-iDPhx694-rJAMcNOA1U867XTgu04xIvSt-FjJXdUXCak5QXSVQfLcJzUvdIcdxtZJUk60HBUOmgnZ09_G31tJW0Ug35SPAI-jKHn1A42dK70OwvU2VyuFugxsjlh4vA2fhcVIihHQMbZA0io9P3NZw6m0cPmYIN1Nac7cu4PpZglrtOq1TjaP7Zyg0_NXxmgFeEsnJl0YStPu8cx0LpFCMU7XuwNm5nkEPuKXRUj3ofEEHAME85USZZpQFrUR6X6FKkQ6MDHa6DqzidAdTPjv8AsYuG6XCdG8thCFPK_2Ju8Mh6N-QO2=w955-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
