--- a/_posts/2019-07-05-492.html
+++ b/_posts/2019-07-05-492.html
@@ -3,9 +3,9 @@ layout: default
 title: July 05, 2019
 number: 492
 label1: Common Swift<br> Milan, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/cZPRI221vtKCWy_h4nRvoH2RzXpGb-tDqM3ph3iRfvp0KaFdhMU5TfNnUbARJWjrGuPHkhfRy-JpC0KHEoyVRM9Y2xhjebIW-ZXLpkyYz0cx5_WkPxhtg9sBmV4jVnu8x57uFkdYeBuPRFZPKtp51S4D4bUMBnCLI14_x_byki3WmDWTHVRiTay-64NH_BYmXGKVmfZkDiaByJVfItHk7rj0k6Tf7VYEzJ03G-ldnBr6EcoeRCWLNHduccyanldQ3wY_Y6VcO_8THnxaHfvHeWvNrHB-gyxza_gXeDnAHooRy4YJ-jAPsEbgRhBwKvgRtH46Bgr9wbot5C0zht_GH_LKP3Bo4e3xd87UkzvJyzzpPGLe8049PC4OGonWT2pu9oyOQ2PGp9Xthd0Zce_bYhaCXrXNy5Pj0ex7hkcsbUIgPuTLvINUC4Xcg56g2F848a3nlswSTal1MzzgTEagUn9YYFwubYgysRYDmLv24N-KFKBVIsSM_me_-It9YNERPTr0e9jTYMTfHslFrl7SFPTdzkQ1LHpjeMr521H6MyXjAuI5ygfK58zNQYXt-U3B0iWCpenNgnOV8fE17K6c4gvk5bY1lcwunHlTRzCFiQ87o-WlHaIyyxjeFzDXM2mJHimNiAkcIYHOWS_FhNd9gBPELin4cvQ=w636-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/yg-EFvRkrckm7dwnOpKQQtW0crZXWBus-roKIDRBMTsvjJSB_wR4Mp76EZl8QqL7G0b7fxuI7yRTJvGIaO_Cl0WQX4FNEl97fi8g-xD0bsp5MkJ880tGgUbexjc4PrREu7xrpSngsLYA65OmORDzKzxQ4s42x1Vi82y96DupCgwdX3hbGJQmUUEs3aSnaydNsCnieineZQ9dlEk1HptPmFlAqivK8ya3V1QhYxaomRbZrAFgwqwBn_uNF_uluiySnmVemUrxgUhkCOMb-uJOl8jJGMcanWFYsn-FSbSqgZILVX5Ftz-3wMhMfdXLVK6Sl4w5SF93WFiAQai9giJY079GzvCsTj6-zefqOr4GeOJXRbt5iWjvFeCCTNdMjEKDcjRN78AHVaoDyFySgHANYD583rjDJh0235X6BuCK3JtvQOzOG69DqdJ3tiiEed7Rj1oPrsjxaKiK6eEkfIP2R-aFwoUF0MQQo9SMS0p0GejVThJISZ6aBiv2Lo4fUXFgZEJBCQRTzK1_d3CWYGEZxH8SH30ob2e1hZ2ax-X2OfyK7Qm4S61G_oh67HjbFGZ2zhDVJXHYl7iYNF_rAdrskVOqgQKigj6XcmdwEW_HdW9QJEQSXmwvpHqmGbWkJxkM908ebu3xKRx76bB-ZnqXcS5M5t1k537rQ4vkq7eriWgBrlKqvimBLQvK4kqSNrBh1NWcBAMWg-ExUJG9EBolqvnK=w676-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
