--- a/_posts/2019-07-06-493.html
+++ b/_posts/2019-07-06-493.html
@@ -3,9 +3,9 @@ layout: default
 title: July 06, 2019
 number: 493
 label1: Lake Como<br> Verenna, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/IXLL48kuW61tUDggMMbKuDzKUqJro42Qap5IC1L_4_xE7Fg3SQGOnuyQtOEgv8KpuCuUdPaCOn8FwrU2OhRmEYnNpOa4KYVQdX9bTKuV91PJVY6EfL7mnfUGrHjBB8O_YKvWlCX80z1QqsIp1X1MWcJNZCLZ1xinxpPp8fbWQvUGML3EW8O5PfAnVzzjTk0yMlnqjSMBajTXotaNvvAj2Ue3yuhyonXRZdHpPLgLRPW--FezZ1E7exA92ZFhGmO18t8Mvusf-oce50BCGTAy_MMKpwKUfKVha2bojN4bDJnlCZR17vOCkAUEnsOiOIJgvb-qU1NN-oKPnRYerFc-tm809xDx_fWrGXmyWubr4SDiMxo2u3B7-tkYdvdTZWUJwp_1uaSSvwDSmdH4BJ-9fwOSAkl137ljpExUxmEyb8VQmB2MgJfSWPvyQhrXOwI-anp8TV-02j4HSPFNFZhtTgeBG8NwfL492hm7s3hIJ8IUOmV1P81NwUDl7lH6VhD4wrZ4niv30OwWkjN3LLpuDhi42sqQCA67yJNpivxU36qqoUa86PxtlHo6A67PF4dmTDBYCG8IkgYFSkVOujxevrBUWBrKKb_64e-uuZCZWRxGKbGpjn6mQNS6pPmAqT4ZLyY3NVnqlIKt0jk58KmDONpSGF64PMM=w958-h758-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/IUlsr1GeaExxfrdUy9Od95xJSTbnZ4FjQCOG1pzTgdqbl2z8rIppAxYeJiSRLUK1vCIjh9JTWYEOyY4xFtedCnqQaAEG_DWess2g-o-qmqNICAEGIqEPHvfxx_TQXCjW7rWAjoe0tHNnMAiG6S2KwxoRyuhtHK4LVM9kCOr9xFojulV_NK0GX99oTD5oNSCuuZ4GFMBZZhmJwLtgPPQXld03Bvi_O2-svjVoy-tq5oXCkugHo30Py2PI2aAU7dzboc4AvM_vQdgibYV_W1Y2-BYw2wqVmepUP2FstDQ31U1SizEv969k-aQ6XNlwmAj41srLWVGGnhRdWykCYLEVLXe8ft-PInO2xesphxm10SD8bX9V3VP1MkxS-fkbRY3nfg9tQaIqdw9b0t9PCfqprfPWIn-8F8Mt5Wg9EQxB8L4xAa-PCScJPzVmrl_NOLPoGqTxg4Hb7ytUFXFGq97Q5D1CArH95vv2CfVprILum8N9gQW4JezKu8WV4xrNi3k9YPrg0wzLjY8vOiul4maoXjc3bkeXAB3aa6cNvPSKEgmN9tOEez9rDxsecWCN1byW6aDBNb4r2fIkaVh2Vl5NgyRdd3a8ow5_deglv6qxsVexKCr6iquCwQHMXrsxYxlmW86ph_b2PisJbTcnsgA1KP8dVVVaT18GFxP43PWWjRbJ9HwaL2oVXItR4f0kTWJuB2HeWR6g3-Y4FKl9zhse6ady=w1182-h935-no
 mouse1: Looks almost like BC 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
