--- a/_posts/2019-07-07-494.html
+++ b/_posts/2019-07-07-494.html
@@ -3,9 +3,9 @@ layout: default
 title: July 07, 2019
 number: 494
 label1: Italian Sparrow<br> Bellagio, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/5-wwoKLtI2NW2fOqSJFyT46MwTXbaN0ld_MorL1zJWeL0OEbS7LbqPyB_01APOGm3rNUxjupGTreuTSpzM4ZWfm2FGLQyKGDVFs0qHgnbIhaw0NMIGhgSzWLnPqHpPM9RiujrhM8gd_vGNb8fGs1n2XxdCyxNdtPGQRrLgTE7ORWiFD81p8_MZjtUa96AD2OnwBRxWasMZhLNECo9407owDeEkUUkLtQiyzGW63alsgqTWhDLlEyzn6qTDYmIyJurEX_7-axUXvDmvl7Cr0e6mwNOLD3Mv4pXnvw4y0RkdgMU-VC9ohxwyvm1kJ-r3cFSCzVyGsDNqOVactYrCJipQXCWxcEjU2OTsgrmKzaotrL1cvRFWBAe1sY6QhoPcHoau054007C359bOenapVaa-GcjQoQucO0hAiCI2XUjqeNS7eggmjey-gbWOs9_BFVHI6Beoi9D0mshH9zKdwpUa7PRV7x_v29Q4im4X_97JIX3EpkEDawCg4mEyGjOlwRUMYiRJpr-hUw5qoP_9NsNZGpT3GSh0pRxjNjTHpLL3S1y6Ax-0Nj-sB1dtCV9w-vblNM-XZelSZsMER46RCXoOZmhoRZG7FiMz2SDZ3ZY74zUCVFHzMLzNI9Hdf3wdAKmTtr4sHX4CcbVLZSghcsTZ-s-0tRdp4=w689-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/rAl8DiyQmaywL6PbOJKbXj4hJGjOUaPa9yUS50YdOHhN2Q38lFcqIC4giEt0Kanu--CBSbMiV6VRi5LcB0dIzzuuSbJkl1JJ0T_lL9H-nXjKLjXFdl0-ARW2Uw6XImHVaID65UkCUDQkVNASk7yy7z9E-xYVhWuMpvkejd36ZToR2TrpyDvLN52TAsmAk898VD-51-HwoPuFVIIsCVC8CnbTsEn1LXBs_Fa6iCBCLn8M089x0GgVMimnze6YsYD_7IpzhRZDx14WXQUQC6l9DLg6lYNC5FT5EQaVhIXAHm8QHXlnNaDpma3Tvo8w3MgWIl4e8RvH_g-_2rRgTf7W0WxUPdUC7RX6nTqvri1fwNadvLUgpOGkeGF5X9QA2pcMt-HpxtAmECbUbCI1aRTnICC07aLZv5EBQtzeroTiTR_a-avxpUVN4mAuSmDFKUBAKIe33iohNnp2gG55BSjr9LvHprCwvTVUKPjWczq89iF2pA6UIJ2VTfYMSFTrTDG8Sy1MdmU4knE667XL3zq7BMsV7XMwu4EbZY5edTulH_BbpGRcd3TVimAodWJgYd0fq6W8yJ4g83bMLsiRsHbK5McfzN6sbnZCBFt4g2X4TL3OrijLn1Bk6JFNd98_s1nENuhO-fIkCh4Eo1ud1gwKZI5y-6GDbzL6lrgUjkEjQSP8G3PiHy6tpZoUnDvR1NJ-R0jYImdI1skuPQJjPJd6lQfW=w732-h975-no
 mouse1: Hybrid zone! 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
