--- a/_posts/2019-07-08-495.html
+++ b/_posts/2019-07-08-495.html
@@ -3,9 +3,9 @@ layout: default
 title: July 08, 2019
 number: 495
 label1: Yellow-legged Gull<br> Venice, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/2n-rV5OOlnvUVqbX4ssUhDr1dPYv8Kv0OZ1yCdgcLE3lPB4Hcl-ztD__Bf2c3ymJ6kLCcogvLy8wtCVeb5SmDkciaefaScwqRnOzSqgkH1ggVuBAhZkH3AjXg3MDokY7gjGq3aAsexPOzibJEt87KcD75s_hSXSls28AiR6HxoVwWNvcl6kigym-6fLbHzeKKNLQpSutBNaK8AFzgAfE6LRR8-GWIdG0WQKj23Hevsel6mGW23NlopoZT9pw2VmV3s_XClqq3dXxYef_ePmmOhtcYfJSlo1SD6GT2fseoxpcLNC8a9xMPV1qRJvKCXJdc8H2bh9N6hed7xOQaArcRCPi-vxrO4CSy4iA3tK6QKVtB00T_o-iiH1XAu0BdvguZ3f5dx9Vdj8FO6B-q1g09q3h692fHdhZLB2JVZ7OCycbxV4pzks_hQqPBmHB7fYwGsud9vEEEe_2E4qVxBpjip8GQD9hGMDuUyYlbYnX9LL5ME9vNpaFFpYf09WegWDS5hJ8Y1wmXPrHbXpEtpblZzxVhPvhIcCSRMcAA-IjxYvvJFoxqLjaQskPkgx8zUd78jVzAEePQR5e5IrwWu1TNc0dHiNYfnZ-9szHTCAsiId4hRQUqL20dFfWVAsU0QTNMlAbcqoeS0Gf5OsRArP5QZXZp2G7ttQ=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/rbVkoCnhKA27DEIgERoKBi-MIbTEdnhflBtRZ7EUNeSlFE_xI45fb83iA7U1VKH9iF1fq8FDuMQm8WkYHyWyc7RBJiX3ekDtT24Cp9Y7oz53k23I7kKkEOZ4U8dJt28Bx4G7bBmBATB4Ml4UjUWELwwNubWmkAs6c18SGVBxWDflTerI8ocRWMbuE1_ObnK-_saKuK_3fR6hPrZ93r2ThsiX4l30N_KkOnpxfyciisocSxi5S20Izb9n54F8HALSimjLdPi-zXdce8GskYJMiWJzJUAS-gTbB04IXAXJoVpnKNarHjVILuE4pZD7ZacGpYVPnB4ssfP_VxWBU_miVG5Dtax8UE8bBEV3-KM_fsf6FKsNNJtKUlbNtlA5Wv8xKh02ZgO81Fo4mg_lm9sr4nWrJBh5gRrIG0TS0mzllRbyfp7lNJCfUSfbsgpZub80CoHvnn9u9xbXRnhglixIwe9R3AkchRfwvqlphQ5tiQvyyW2AqZNdpFXmppD6myrXU7Ncfx-o5oK-uhPQH2KpAV2kyeQCuPqwy_749zU0C3_yD1nejDd7PzQB1TrDC-erir7gqCzI4OWg9dFuXrDV-qUaU7YdNQAn3e__cWUCDJoNySCICRTNogW4fUVm1e22wbE4X2G2njAHYyJY44XgcLKiTZHwDDrod6jJJtFyXEA2ja_XDsEF62wzsxl1O1ZugmhG1-4OrznqsiE-AD1T5gC3=w732-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
