--- a/_posts/2019-07-10-497.html
+++ b/_posts/2019-07-10-497.html
@@ -3,9 +3,9 @@ layout: default
 title: July 10, 2019
 number: 497
 label1: Tre Cime <br> Tre Cime, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/OoYqrSAqomX3Rho62yAOv5GYIwWA7Ghn_w2g_FZvoCaEKDKKyXpg5BjTJ9JNfhEVcURG5PBFlKhBHFHsyP4jVfGbE3TvHhEpe4u-IzAPk7XRIHVHL77l9Gms9Nc50x34zWCfaQJdKV0owL9owRkFfs0ngVbtx_KFB78Wkh5SCenl1ijFmdNoYt_CXXNYcMO49hBWwCfxr-bHGD8B75OtzhHmhi8wwno-9jbNZouWVh_JiJs3MQG4Fo9fPDA_4lwUlhZOygjKmHMY1LGeQjvoehlFIoLTyY-dw9T-GrTg1Knb94r0--2ZBNUDZo1fZbHTqxuwrUcXx-hGN1nQAhcZKgUdmTAyzVT9nm0xbVPQV2Vt_RyJdqcx85aAFYdDfxazmnv0TJIRqE0u64tDPC2xqT30-BlG-5qZ7GTs8Ao1VGT2zfsfslRcwu-Y017q5f0Uo0CU08_3dUF8lGybZXMBm3v3hWHeBYG84KyT-Xy89u8q5WkRNie3E_uyPaCM2WksVAvgPWrGBsSO10SUU64yNhEqa-9EkfJvVyQJLFt_c1y_Bsxf-hObFG2bSIR9_dpxtqaqgzgYesT8zdwd_V7dXtAO3J3YQWPv7ainvunuqqvnJt1bekTVLsL8u9IBpkaF-9mrClL7QonF7C5k6c87TT6dSSA3l9o=w959-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/bYuQxMhR7Uwr4_UuaH1FhAWeXEebqIyQZ3vuZMmDmUT5pOxZrKRdctFNptxnVTOfXvJPOYLKYacDyjWRih1zkh7QXhsD3Uq10EnD01j3ufF1_CuHcwdj3giarBdCXR2Rvv0izj5TeLDHOK7whISfheY1GhZP7VovUM2zSccJODWZ78pwWp8RrGugXrqNajsah00Y25Dq7N-iBR5AKD2fUrLyEU-sljYMRuEomws7Yf1Sn89BSNSi4xfwvl9X0w6WAyb0wjqmX75SqgGRXwU2IVSPN33LT5VoB32ApMu9ENkCLiXqqCO5H0n4B35muLVi7RM-4oGAu62wqbbrkOy1ypuCdu_noS0hFJc9w0oRnRtncQkJAC5i20d9d-S9dilDFPkM3SSRNHwDF5CDe0_K1ZUb2xmX75bjtn1hhaJhmXRaoAkyPUYgrxChD5I089cqIcCk-4TyPdKoyOECUYm5OZiUy5FA5DDwV5As-d2u-HVChxbIGj-VHTtNbxOfM9C9g44zBXggMLGp6qsQwhaiA4ThDN4-GXWAsFdJsy5TG7LsVBC_oMuWEvqNUfssgGPbqwjSEw6TY7E_jbYag6HlzA1bNOxbGNctTLAOYtwIe1edva4UbrZW04Fdu9bhKNu5NQY8IMluy84D2aL-jJMu1J_XVrSD9W_tlPk62vn76tnL4aMaXHGcTvTtgGFX8phySGnCVNO80PS6H_7tnywzx2lN=w1010-h975-no
 mouse1: The dolomites are amazing 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
