--- a/_posts/2019-07-11-498.html
+++ b/_posts/2019-07-11-498.html
@@ -3,9 +3,9 @@ layout: default
 title: July 11, 2019
 number: 498
 label1: Little Grebe<br> Milan, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/XoRo2d4hpOJ7sG5zXajazHv_SxPNqh_O-stHXquNEcjsFSPYECx4QtCiqI8KsWrONoFPazYLGDvc1fbIZ5ns9_noD9uQUkqJ5dOVssqoWBuLH0F6wCXfpFuSU74sKGCqGJwu3fytQChwcv6lHFnhzf8rbFhjUtgCPGTOs8O5R6tteDfQrpM5ReXb16jDWIJLq1PdLBQu8wZ3_cMyKDo9TKmOUHm3BBkaXXQjYQJPlQQcY_Xp9yUg3SzJ58Cn-vSojROD1dmwlA8NHulAnC-QvLCrsq0b8rs65RitOcpv5i9foSkZDJ-Zc8JaLQl72iZ05oHQYsPlsrk014i299QLzgUC-bgxvJuljOqya5Z9n5Z07XwbIB6NkVnv5-oiVpz8Q11w8x1n3Zue4tDTqRjuaj2YnNv-IMoiey6XvjfxhMgWZtjCfopTQ0_0fuJd2QiqLMVJ8DOP3KHFSb8yoqCEqRp9iUm3HL4atCbEDeuyQOs_Wv3qybXdjXPworj9EOT1_tYy6rnZZbE0AP3Jzy4ycOq_oXVTeXpDiP8ZC6ZXANzA98lLu5-78CD-XXZXTosjwCGSvdDw-O6B0uJicZtDDjwkwVLPLyszqcE6z-MVdIvVbXwfYiaqz80bltRuiJTgkyQhTVo_X2Vh5MXrOQAIa1ZgW74JngM=w956-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/Prq8MdULUNO2lH6XTLZLZCI5VQnZU7L9gWimV_KD_-bBz3ktDWObRcx1aiBlQ7xe3l7YLYWziiS3H2Y3SbBkng6S_XE5Y8kbd-bcTr8xkXlJIInH8o3SvCwEFjHslGEwwI1aW9bCi8n7uM7tv12ULrK9bZhy5XahaSryQ6-31d4XwZlNcj-UeH7KTZO_ib3Sap3if3cNvHr_CTfObhxT7wJJVpyw4O_CI267ndhwR1dzBKoqYf3YP030XDz-zGdA95piV_RNiE8UndLWRdRbeVzVQuD9SMTMcUZ6AqUHka9p10T-QfB1LYBjxfUifqv2ZpUsrftetPK2hHNZPGnIXaTulh1fayKiPFRpvMzeIG3Gq9JgJNaAfVN-3id4yvjh4VqbO9-d1mAkU7zX7AJrIcn3sfcEHNgmrG4KC8FMnWSy0k9TV5lIqlT3TtlikmeqTUolHbmjgmhOe7SEevTt908M3cOOJFfZoG4Ybe91uRQTdg6Az-7oQPknLKi70M0AAn_IKKSJ0bmcBbScJRd1K31q1psJJv9aGaP58qvA8IGHCUuyW4Q24vd9DCpLhTSvnpp3Gz0jwrjSzbG-xLd4IsNNprSGzfT7VN6K2xOF8-T7cNL8dodvUmULH5SFVMhu9mH6wiBjgHdDldRrYLtwp45wF5Mg33jBBUemIQc4I-kDazjCED0kVzVhiSqPN9lOukFArUOfEtSjzk6IfiBB-q2T=w1007-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
