--- a/_posts/2019-07-12-499.html
+++ b/_posts/2019-07-12-499.html
@@ -3,9 +3,9 @@ layout: default
 title: July 12, 2019
 number: 499
 label1: Lesser Kestrel<br> Bergamo, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/ikTlGS1mElIb7pujaH8Jx5kiirl5ouc6qJ1ywe7Uvbvk4WG0HwC9j2Q7vTVVm7amgb_ISqggG9natr815Pa7RNg40Qxp8IB5vqbNBvjKraGVCcGxo3ztbEkg_uf3BNTVVMba7BnV7EpFOtzMlGMPE_hRimV16gYSAPzZrhAPk89BwwppeNgjlK3OXUydXo-lrLp8MGHJ3sIIhkJlKremBMtYOw7OfF8xy_iZvBiyaNxtyEM7j9wKkLtYRRSpwPgEEWbgEvmx3xh8jL9PiAOH3Pl55SxHU9VF9A6fUAwAX9ZhdzyaDCnrFdn59C1VwVzHaa2EgvGYhUTm9s1zT1Jz-oXfUT2lX_YCNB2YHfHKeBu95WGUpRrFqxFkoi-rkhfKiAAzUHg5_2nEnxI6PyRAuxJ-acNZdtI19E2sHWe3XAwJVzd8GVl-gnGDwMj6azJFa_c6P4FFIKoQixABpQDrVSsN7STXGMmqyouZQmYRJaOoa24YM374hTcm85gj5t6XeI6CgKL8JSQ0sl3jjJCUQQRyZ9L9B_5EC1GqZl8XQ8UTOYEL7DxuaLptpyZeLuUBJOiWA9ZO8mfK5MmWH9TO-gc_cBicWh8qYc7gu-uGC-hZeKYfth3YlRXjNZEDizKhTD8124e_gJ-4eo34vzPSH6A9VwUqmPk=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/rrOXbgNQJ9UH9ElkXh5HygNFhvucuiliNuqU2fRO0eSljqCbldrnpo3V5R12M9QaWiSW8vFvNVjXQdk_zP_Cqi_EfU9ea3qBUmRZ2VBj8QF1sgLuYiZdDBTaeQ2dCPQeIN3rpyIP_brNz00UP3igtsJ98ippDw7fu5sl9u4wlNsYC7SvK5FAtqL56125YD40jvfLssV3TGijIW87ZavvvlOkzwkTBzGcDqOggOoRsXh8TGikglhXeTbg-XAWxrLMLAKDvae5QjmEzdp4BxCzuzPPopjwuDEKpfCIRCS0_ONaaIqEANJzGtj1HQu5ExyFLzlZBlL2foLq6C7Qv9JftriOhztwe6IB-mk_8AWQCPpbi6JkHQLnh-7c-_Q6x5on51FUYbxDVQtbVWGt4cxCwvC_9vXJjqTxMNm5UP6kFQyQ42voU8Tn5FUAgabYeqoGwqJpsSLhvu_RkKpbuHrBFyEO814XAHc0LWLP4MkMxJl1zM84xF5xDqP1A_YdAGjZF74CEDkIpc4kUb6zQLjFBLUi2C-Hu5MihFJILGhey-36pIcqs7vyiX0BgWUAd66s0OT0NzVu8GdOxTBMxuLqIvU9GQQI1jRf50dicpysVYNKGw1gNJhimw-mKFinLtdlpnyfaLIynObrjp3Rw5BI3iUCbeQXvf59RsomejH4azDAEOG80BlMElYV-BevYNRT9DhoTrsXM3G1yTq7fDAisXgr=w732-h975-no
 mouse1: 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
