--- a/_posts/2019-07-14-501.html
+++ b/_posts/2019-07-14-501.html
@@ -3,9 +3,9 @@ layout: default
 title: July 14, 2019
 number: 501
 label1: Himalayan Blackberry<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/nAfnKzWadCFk4PiWe1t4OLuV5T0UXIDhv3qSX6hRaodkULBrJechqz8NRvggUb5l6B1946gCEhDTygWrPNAidaWWsPllkBkX9ZHng5AJQNnDV7qUxZuiKcUh1Mi5ACHOy7rLBnpEktg2zCfWpGLXBiQrk5vzeI30o4BweN02KBk0_ks4G5VSTr3r99q1lcbU8uD-ZtDzXHsOvjWFoxOLMGEvIZgYxDTmlGPSbCU-Eci50vxTMKGUB8R734o6Tn4EkkVuZL9v65Js37zjAWwReGMuodfJJ5uGaRSQ1vYTKPfAdP-g1S2mKk-WOtqtN0FuqvIZrtPxsIY8d7KoBmV4HUE412gO1QHKqLAGcJK8udnMb7xLHVKzphfFPgsz37ZDfMaKg44Uo9gSRfWPU9Lf0Nh1YGOFVPu8GJBElXm6mpStXBIPNgAqX02idRprGPrSW9gtfRE4OhTuDrGMzRRwP-tPoldV6D4vVzcl2ZhlA0KR2Map_yjkrIs3bXD1fsFGj1cA9BMdz8REoTETL4f43LK7nitaM07VhnOP8-YaCyIc7eRQ374ObvB4o5EsUJCr3TpgsVYmo8OUAIrZtLG6F5Ssn62vww4QOgW3f8MWxMHs9PaCxA7Qt-95GD_VFUOh1kiPdXpfFIs82Mi-Mebts4fjz0yST0I=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/a6P_VyKtwWNJca3o6wYVC87NWDWYZiqcXB55j5aSH3mR3nACaYdk5_OKF2G6G2-kcfgBvHnC05IMm2Ofx3XxBg-cs1HXZG0DIXzDv7WuhG8dVUaYQVDC_MiZ298DrVqJ3ibUEvl7iivTkM0VmD0y-yJJQ5AxdOGy7AM18fLSDiP1oo8QPiLQ_I4lhFhixBKCeqSJEha9RzCXygH8HZeJ2OcLvO4DZt8Y_qZOyvIN1d9SqwIMYffFM4WVVoPgqeJfs33uCqzpjArcacMZVHxpz_9C9iWKcr7fKEhj_YkcugJaN6Dkophh8uwboi8DTuGhtYwwFrlIgPyGmLPvx90nABYiPwjaiIyLi4M_C4AUMwNbSJNqAYb1xdUObBevXjwcNy2J8Vx1s8xeQmnaK4bgf0_G2Q0hHE7lFCJYEE359oHeBzDRwFCFI4pqq7N30L1EHgHRa1o0OufGPksmNxNdByEcf7ncoSZj3Yb_mZgpS3aadcGc6ks1rrl3KacpbfQC9OZ-HZYKCWfjxcWIJoy8K61g-xEUcEyK6wzK3Gxco5pdVFkpBGm37YUMDLld0ue7-ZZv-xf6bZVu3mYZ3VzASxYsPUCGizvdM0ws6QZuuvZCWIA2yogoDALrqsYHzoBwUupsD53w2A4Cr-cD9ltiQ4_3-frzHpq0WRLR4diwcL_GkSVEdsv92RM73B4h1CmCGNEzG8s6Xkf0GIs8pM9KI5JO=w732-h975-no
 mouse1: My favorite season! 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
