--- a/_posts/2019-07-15-502.html
+++ b/_posts/2019-07-15-502.html
@@ -3,9 +3,9 @@ layout: default
 title: July 15, 2019
 number: 502
 label1: Curly Dock <i> Rumix Crispus </i> <br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/X93MzFTt0PxVtuxINyX1LUAzXxmwvvxZCoS0pkfiuZ2N0dfX3RpCNPDHKxU9Zg95nVcE3aVSZpujJB2AR_gnthVlf3eeqTAM9Mp9vIdug5p5JScateAzxkitkLpTdx6QSul-2qbRnAPQcMGp2h19R_Cd6bHyLOqyRH7sNKELbtwYnCyXTHBoDDf3zQz0Yiy0ZR814B8Q8-EcL1NM2lZ8G5nTh7_dpLN0oGyQGzfotqhdh1FyZSYCZCbTqMqUxInHF-WRb3pz0DhWubfmIW8umErHrirgL3Wl71UmkY00RjC4FldqUN5wz0ytxsb2WuNvkA3jbpEojfkpsJInNjGs4rwgA6eYV1qG15pY0qr-aiK5ptVTinz3JujeOvQcpnJUY2aW6NgZz_Vt46oLHLADiWMA753XgQAEn6crB2SZeECMctg88moJfd2NyVBvYV13ZBv-g0tRE0DFnCcI4_BS_aaZGeVSLcBXW-3ads5Raoac2wdVdD-wIM2zaEVG6ANQvS4MHEgjNq_3sySf2sjcJUhgA-uxlYSD_zyxSgoQmyz_GRjnQhFiKgx5k0q1uP_gCaesQCwv83GFhFVnSrJ0fXop9boQ2HNiunfEmlFc-jvzQyCB5PfZvX4K2sdvYIeyMvJDJrd_QBmcBGVrX3T_9V26W8zLSjY=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/9LTibj3vnv052NR__Mrt6S4d9da10rdOleTIKQ5kN-a4-FKKJyVLFIQAQ1URpTuifQL7PqnntPsuVjeZA3iBpRmiIcHgEflfCJgbea8YuqnQA1JjHsjkZFmOU3K-467YJmHOuKBWYsuifGQXU098AOOPGBX8P09omgv2MmqhNz9L6c-QgkQW8lNEuU1r2DEyzuGPfE38kNhf8vYsAp1EM_p1u5rXoNT0-inomfSOhlwwnibleCwXOGxqT5AKv2YV60hp0gH8cstn92CKlQP01JBlEHPvlvxJMOoSbQKB9Xi372URswenssP0qxcr4Jn3H9QbYcHXOt6AlCPrJBI-lKMRLBbsbrZSiJXUvaMVwoPbRTJc1bGrHZGFs93RySeO-Ap_Th_gBC6jDZfTq-Uoxhr7ia9Q9VK0af95VsYMhhClm1iqWUiIf9Gknkv8PlV82gXrJrUJ_mBY0qV_aKsDnvxN7z6m-d05jAImdtSRJmuCEHOmnOjXm1y71bWFVh2l1pdCbmwNdEgUJF4bmJXycWiF6znCeGSWtPhJLdGHtObgwVAIt3eng4ChzDQZNMhNIxacD83vlMB3YxQg0LcwXBNJw3-CWjfWQ2pfYd-LSNilcCoyLER4IENquRjC0hWr79v-bvZ4qeCHVDgsYbWs9n-IgIEoF8uFH3ZgZPbhY9z5KWf7NsHaTSN-7-k8pnGk8r3jLj-iQqY2Hd528kKc39Yx=w732-h975-no
 mouse1: Whether in Europe or North America, there &#39 s always Rumix nearby 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
