--- a/_posts/2019-07-16-503.html
+++ b/_posts/2019-07-16-503.html
@@ -3,9 +3,9 @@ layout: default
 title: July 16, 2019
 number: 503
 label1: Northwestern Crow (juvenile)<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/J-1Zho0ITkSrXSsCeoVVV4FZfZiiLSEog7pZgm4jmPgpkodJIP81-szA-CaRNFkQfnjkxDtDUaPqwue6B4tYIFtT-JNlk8bFr5BVVvVT_jVJv5eMVkQcAtbwIGRSTTPMuaUiup4VlBnO8bDeWddJ-qFUa0Tkaa5kPOeN_oYiOIwLt7gzB73JOI-MQVUU9BGdLaENj2uVAVmWPpuyXFiX0BFsrcvr1Z9MDLLaNsSI8y-hbZaZba8jAqLX-IU5SptptK9Y4d5ZvsA7dSbIqoX697KhzsWNv1hMuGpWqPlChrvpM6TcH1QIvYnGyQoUioWeXcm-5DzNP09aELD2oyopEucEFbTxoRBDPtX7XuC9euo6aOQIBiQSFZrmLEsX8vQ-DMVtMKc7uxd6AejSINrLRQcFjyCf1b21Wi0GeXN_nzEXiHc3R2qCYzM6QjcXcWxCsM5KcE4DbOU0qqgCCki-2Nk0TdhhUOgJuAERriII39-4y3iXK98pnVrs6yy0Pdo2FQoYmD6pF9tA_AyLCKqmBKBEOcbADa7VEndC0pIN3y8HdWM9XPIx7euj7Wth5eqOvzqCpQkUjsA6UiXGsX3s4XCT-U8E5XXIwhfRCsGYarjIVKV2J_eZGysNaayWfL3CG5Q6klA8TA3KALyc1x64eatuQRECzfs=w1164-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/hJpDs84NbhoBFIo11Cfp2yHIo4V4hNC9yXo7zF3aBM-VMxVCykzyzlYQnGyW5QIyrLND3y27oaidRGNFLcdIr3e3YQr9L_YES50QB2SFGTszSC2QjQt2bwmvXb9c2ThXanCeGwOy1Mc9IsFYYqXaNT_COZ_AUxTnbk07AG23VyZiweUeNHpPdLFMyifOlsZpN5AiyqsTkx5r3g9xjw2DVzTOw0AS6Xy7ueLfrBA8uzuZTI-0WgY1rOd2NHOo6vivE9GrY_xu3nJmtkSvytm_g2KbHXCHRDo4d3elfESjDERYG9njK9IqVFtj_e3RHcgbzK95dcubjY0kP9NS7Z0KxATswr_vygAEMC6u0G7pXyz_pv5eRFD9JAmGM24JgSaJkAbQxpKuSy89JFOmcH6BDLOi3USM5fUXQCZ1-edZSd0jxd8CpBpGKvkDpiNryJLMuMiBI1i8JC6-Ne3Rc1fGPlQZiJkZ47X64DoJ5U9pLetFvwu3MFmH6HY_IF4_i6YSPDV_TawYify7Fo3CPUkvWsgPflLAEUDhvfFq_az8MmUIrLFsZ4Llosn60OdfMGlC1OxCJwqqUyicpYh2k-QeXPZpy8CGYBcOlfkj58gzrkD-J_mKB1uUCt1zfO2YK_t9gB2AXRMaqYV19ERRaeT-BvFoWymxTWRbTGNBvOuqNK5M63QF2J78XdDaeZyjNT-Hp8m5isJQMdQAomSNpqZl109Z=w1182-h941-no
 mouse1: Floundering about in the shrubbery 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
