--- a/_posts/2019-06-25-482.html
+++ b/_posts/2019-06-25-482.html
@@ -3,9 +3,9 @@ layout: default
 title: June 25, 2019
 number: 482
 label1: Blueberries<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/lprhlxWBsPqZayz7kwaHpzxNWg7_qmSxvkcPP0UZXBWTTWYZkINxsq64c0tZKr60OPAowtD3JbWQW23efeYHDTCnxLIrVRn0YOPiNXQ_aK04xbKPOeg9s41VlGAyGA9eNqAp7-jAywbL2JbAuzhuAgAysKkPrYqHv6m3yfZITAjYWSQrKLgBze52n-EyCfHsnZIbJEb5A9JagYjDw_L3LJhTcuRoPI_OTx1RmpLie9-Tsdt70ahfI2VKalLG_hEpsCkmUSDLCMdm1S2Ict6p-CX7i38IePikcmJlwFItZw52XVflr6YKaOONmccwdb-fwl19Rq5gcAxLJ8Q1R-NkNJcirEQC7q0_hE20sTiWcbNw56BLJ4oPgfpfAmuIkgipiXB6SikrMaYGfAnnaww3fqcb7CkUZuCdCz6VvUVy6VC77cbCJ-gxGNV2M5GCrB2Kjt3UIlfEvlbZZ0rj6B8kNmuJorRbkGuvPt-pzLBHgOLP4lY4Vg-frGCw3aHgg50aaMzbBTH_IQbRRxbsnwS4-jdV9-bBH8pNxza7S8_kj3GdO47FtWU5jUHrPhs9bXdBxOeDJ0Kj7dcke3np_mwsk_dLAFGIgM8yovN_3w5oC7qIaTPFh4soWwL2DSB3kDd9e2bdDaKlMbZ1n6CJfjFHgCN6H6m-8R8=w882-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/OOy7XEfHgyaaerFnaDYth-FADK2uoiMjiUW9LJD0ishbBh6o2sAOzVQ-gllY0TFMvuaNN7zpeMKnJMM2EQWLyQM-z5OUBcO8FwrQTVBFkGssblgd4NKM0JNbXz5PkaJQTy8IuyGAr2-XP72TrLxaZKwiBtGZ4Bs_uaP1_tX3D1ji_6aDk6csBpSBysEJ4fwhHJ48ehYrOnrMR7fqT5Xplsv5tQxQULMAOBuwjcZjjc48BckLTYVYPiDBBR3gZZJTwcT4m1C82nsOt3lxPddSTmNPg5RmJgmVoakgLzTRuI7ypyrFv2kX1DeLBJ24SZ0MROZkwJxu7x2N9iBGpHoX4VPkYmmn2eBO_OWFraYcZj24-tOm3QzvD6aUnoPwlZaXqNTO-iZ02AWfz6FAaJ5yr2TZ7rb7VPMxk2CzmCTnwNqI3qm6St6jn6C-pvAht0GMeLDQSyPg525cvqzP8WCteFLR01z-27aLcxbjA76X9B08d0bQwD3B29-rIrhU32uDYF5OgvOcqmJlLSXb5qPctRG8pDGUqsP4TPb5F7m05rBGtoFEPx06a_2UThexUa-F6Cs6WHhzK7hh5_NcrEj7Ku-cPWk5pAqXc3Eir8YAn0RyJ6Q6jHe_leuaI1NtWTc5Pdp7WnUFSiBcT2Ti0I5Ew94dMBcwbr_UKNvdlwyC_UlUTMBpUhY5z6Lbw7yRT2sm77_6qsCvphbRlr5vGroHzHHS=w936-h975-no
 mouse1: On a long bikeride, we discovered a row of blueberries planted beside the road. What luck! 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
