--- a/_posts/2019-07-02-489.html
+++ b/_posts/2019-07-02-489.html
@@ -3,9 +3,9 @@ layout: default
 title: July 02, 2019
 number: 489
 label1: Ladybug<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/K5tJ0xgHSej1j-DzNm0TjhpDNiXX1qOewCLOA4bOYKre2RtUS7rZrGlN8-NwbP7sN8WEc4jwzA9vepsL3mAX-sm7bFvsdf-LeGh-N0GZoAASRgmI8dn5rsHmMpAPrq6zwO9UjXupRoL07zJce7lgBBFY-woIiK1481nWqkgxgDTN4y4oyWEewXu_ggC3iqp2-S9oHcziS_QqO6-a6-UOyTGx-znPHAPBDLRcn7BidhhjITOdRDTDIef2LW2bvNWsMO-_U50I6sU1BEmSkRUH0b6PmhYPSZZvFYPfQAnmKTRZIPrVxAYnLugwk26wO0DQHJHe1BpJTVq8WGwiCLadBDXhm7vkXXWv5JxntpkWln5PmMCw4h_wIfHrSlKby6KpVQvaUSW5u3Y9Vdra-d2lM8EZ-Pp8a2KGywy9v2uiVv12x9NIaP2cRabfVvnB3tleNeR7muO6tjGv9g_DcfV6TkNsfrBY8TkgCsd6YTGeAfvOwzpeUjblcX6vC1pAicAnnM8kT3kZhpSTH3dAwIn_72mXS-S8r_qjZ1OmQts2qPQSjoOtKuvqdzSWWkgQHhlDBk9t41shfD7xW9HQsBoseU3ekEMiQFryY0xElkcmt6Q03t-LOzYvCrKMpk_Pdlxj-uTLua0R60_u3Fb3lE5N5d-d8aiXwIM=w856-h918-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/QcotWuWGxem7oZkLh1l-5NWqFSETtEr4vHhEt2kd5zmByhnpbvIB-6JRhb4MOG2Dmf63qUYBkIGkM82QSiCZ6o7ay6gsZaZ4iX-D_dP7IdIL4MRudwjabN-OCuosg9Y_IjhlgyOx0Rn2dJibmelLlDWjH40pzzyscw9ZcG_W9p1PcSHWnw_AVAh85tKILpmlp0622acXjhOANRVoY2a51pJeCcnWbutPKbOi6EZT3Tlsrw2GAyp2rmisE6UhCoSBHvC7swdzNpznmb9LqzPU3-RptvoS5tuk3o_yyxKj16f-d-Z2cYlOmZxEOh5w7rJ_TNyxqKpXG82Qj-O4MXF41UV7ZOriSyN9AhfTISk0rwf_WIzUKPSBsXzFEJBYpf8iur65g9U0M_XvL9R1j7qnSNz8CDX9CgHj0rkhieD6ttIo37L_m4tI-5jN4f9QKOeeLA2lOlu5Hvjbh4Mb2i3UYV3VMuLL_C5r7RPS4-g78CjvHFLYI8LntPGyREFXMXut50eqEfp9MoVmor6UjY9PciKVFkCsJfMkILStxpO4a_6ZovRozygx8h3e_mkMQOvQvv1Ujb3-6l-C9Pjn_DMSvqNuCc7Owex2bsy3YVitUkQFWNcKretVB4bnZOyr3RGEU-nqLOl9dgWywMwUIpUzzvrxrQvOYHUFNngAxVmf9gIVyK_7XLEj2HQ1g8f6ZLAhURHOZx7R2sjBu8dHKHVVdd2E=w1135-h975-no
 mouse1: These patterns always fascinate me 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
