--- a/_posts/2019-07-09-496.html
+++ b/_posts/2019-07-09-496.html
@@ -3,9 +3,9 @@ layout: default
 title: July 09, 2019
 number: 496
 label1: Ring Ouzel<br> Cortina D &#39 Ampezza -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/kNoccQ0ucbb8p1TbAm_UUWIKNq71qJvqDXCO9yiAxAq0GyHws2Pw9LadYYEkQ_a-IZTe9BLUGyO801rfOeXWjxobYwxc36PNgOs4R52q6LdptyzZYXk1Yr_V59qEN7crYaeb9K2y4hkuLmz2WDB5YBRYOjjWXt88AUgdpUwOmt7BZ82MvDtvQUAUoMmhUdhOtDI9EVOaO8eUneEiKqWNeTz58M-DGz_4pawNuzjUHbv4X5fagiMWQfFKcrYQZyTBx09G0mU_9VmLKA0hz1tAvvw9ZYF5Nl_0rqRuQfpjAqLo02sPNzatlO-NzDvOe6QGQIiWVPf4M9TeE4XcEHrMqeycAkM2hXx7Oiwf19a76o_5EpPgBcvAVpomSrWR6ysnucmIio9F1VDGoHusZExftz1cMIwIhb-PvBuGXJa8ErxeZkXkzgaOF1eJtFBqA16LMwW5zStCwFGCoR1vPq14XkPFwoOPtudhb5fmWE6SHbLqAouTwSowseGc6ZVbT5OOka6MY7DKM4DVjiS5Vtdt_tt5JmigJ6m0qNCPcZggVJ8C1fURKBoI_XL--PNbzTLQ18rU_WRcB454B9PJ4rpxF_mJbEv8Q1xmVMuqMSIc4CaT8xUkB_bS6KG3lCijwqjr3xKIgyIOUDaY6hAPDZpu7bEcePfkdzk=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/54O1lHjO45L1Vc6vFXX5pil527LQdvVAbKbDkUhkrPbFFVCDiYNbnqH7rf1Bj13GZDuNBiMWrINuV00Yihir3FGP22JN8hcb-DWuJ2v4kdwCBNbwDtYByhlG8FjT20My8axp1Jesxkx_FBrrAo0zGjwzkEJMh3IO4qGH5kJHxvcKxoLKIfWhDKucAH4sgk1d_UgkZOzSAGxjUp-_vOGmsdzMeGVX9xGthzubRNxXfgPlj7_3v8DPeAtElpv0ahjnmDXtLLP7zzIddI9gOTP1c6ebq1vUjxvfTr8Wrtv4A8spPXxJKgwKWJ8z0L-_BZzc6u6jzFUjQ1JgQoIljaeeqBWwqoNujsZRLjnLnVyVBpa-aFO3viC2JMVNNizalAZuLs6YoGdjzMDTQfzCtwasnzY3oqaSHo44YGPTL1R1dC8UagsxyOdK84dafZL_RFvmd0YJnTBIB_TxvytH_UY3ZLPScvTqKxIY-7uDiqy9857_A2olAxn9rAQ9VVk5PWTK5flt3GqKngSJW3l7Ks0AI7eKqmRKjMK1AjOZMUxwtofSu2mtG0NV3FFGIurFSclwxy3KzOPZHRqcl4jB36wbZ6V1fEpcbFqwBSa8V_ZLaDXOb9gDcVb3DcRA61gvsk2QcOfa6ZgflkOZOBwvXJJGhF_DHyGJoAlWEWRAQZBjQN6YoXDS0RH_QpSSNsW5qzIeRhTBw_x0gwUlEEAINKbZYjH8=w732-h975-no
 mouse1: Huge thrushes 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
