--- a/_posts/2019-07-13-500.html
+++ b/_posts/2019-07-13-500.html
@@ -3,9 +3,9 @@ layout: default
 title: July 13, 2019
 number: 500
 label1: Common Wood-Pigeon<br> Bergamo, Italy -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/I3rP_I8KvqKtK7Yy1kLlLTP7BJvJ2Lgo8N2XRqg89HeLWzqS12ckMdG9lpvUK2dkgSYCvGX6t5d7RzWK7IuMvBDmWcF4wXTVXeLLrMUYJF8ttc3v_Zki6TREhi3OZxXtX92WSbQbz26e2QNcqtgT2-Qc68zzweDdVc8DbTcibL38OZBuRtu01n-wsMPWZOGMZHFpDhkXbEC9_12YebDnykL-cuNN_XC3Jdb8LHSRMiG1mYdcgIRIgavmFjDtQ4ZTz8nEXWiMpeaNjlNg3h5AA8pY5wj2_3DrUuyWMq94u3swk47iw0T9b9xeU3YoY2aZNfdN3qQ2I6ksskw4K44W1AaaaUh0WI7i10Cp9iojMIMds-vHbo5gfqywddHQGhDeBC4AzftWaP2dYEmDkkfSKrsqmppUyBsDqDcovRGilYgvEx4syXhcMc3lJJmzaq6-Smq6OWbGlSomCCBSw84n4HwzvJ3YEOyZRy6ITJ0saS5ld_ME4mLSuVsbmg6vWPEzmgi9JTYF0cJQbqj_eP4oVFWgyYTk9BEHj_HqmkAGwIIxs9dmt0UyxQJGdw2CuW0OF08m3SH140JXV123kdLETh8KTk9pZ12ytXJXtrld-RG_1e_TTOcsU9C_wvWFntxb282o5ARUYajVq4VZVYD2D_J1iUQ9H5U=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/OIDXx28ti_Ri3knAzWTsOiveLScWSNn5mjq_XlkREVGj2vtjOxmtwoJx8GQrYOR1-nbVG-4EOvJoMvpXJXbW3Xq2OFaRFvac9rmBjyeAsB7mOqriSDUfxFbUUPZmGV2apJBrCyCgowtNV-LqfFmljvSTMtvgV8XmrC0S11Ll9eJWUYUgqF7sakeij9tsBSBRUcPyhFjm6cvYu4p7vHWD0a-nRAtn641NaFz_YsJ_NACwXdA28qeMfdDm2JkJy2sfqxTtEyUBgjf7vNpRj7u4C0gU26rDZPdCygZNgBEJe_tgNqxurgOGmF6eCJ3cnTwt4E2bo6nY1j1DDXp0GkR7qkOWJICkTFH20OP8DZWJa68XNYN4JoqF62eREfNFBeoaGhWNlYqBF1fUG0WFhXnO1zdDYWD5b5j77J_4SbT2DIC_ch2oXEumkDAag1ru6_SG5eKzrEyGs8T51R65pUffPOD6_clGizHiroMMbAYbx9zOVT7cP6wwQfe9M9rHAB2DaUbiCIl62HefB5tONAsMpR7SbBc76FWA0CdoZ7tAooN67-yNV4GRcPsIaiv8HaJ7btQumUJU-VTJqWFKdxAY8sCZo_FW1VqMqZESHAo5sAnJLgNuzdCj2VV7tYkh_YJKzuGao3Ob6H1n317BSPI0oJd2vmi_aQOlJIE4X8PzEUMIOdZRkXNPYa1QcOiZAU0mMV6NdIIE7Y60vn7YHQKxG17q=w732-h975-no
 mouse1: On my walk to the airport, after I missed the bus 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
