--- a/_posts/2019-07-17-504.html
+++ b/_posts/2019-07-17-504.html
@@ -3,9 +3,9 @@ layout: default
 title: July 17, 2019
 number: 504
 label1: Yew<br> Vancouver, BC  -- HNE
-label2:
-image1: https://lh3.googleusercontent.com/Eal0Dx02I5GJtlQeaNB4hjBaNn7eMWldL_IRr7gDgfsKrm84DCP_2Qutii0LL5zzsY8PI6KU6jiiPogzarvIBq8xhhGMdrebjc0TdAis3vODLzdc5lDmAwqTQZATgw4e2lf2EuTj27go5gv8lLpxFznf7r6pWQxp1WamDcpg8yAvvbek8HONXqZKoHZf4dkDQjP9oS_VxpiwJbitMNPnwaJuNCeSD9U91W92iN8DSduSTjyF2BQ8l3EHMSeVbLfw5vuEWqX39mRKV5Syur15f2E06PXjrrS604VjnupBbiidOQ7XM5Qb_zZvpAscshjFub286d_Zb8NoF2UxegK-4vpsH9aOT-7dRi5_31agiplU-fmDAU8_Nx7GaorgjD-iNsk4nyIlHIZhSE7aGsTJI0n9Vv5MxtlUrBy7hKc3hXjRc5UfjsAZ1URJrHiH-a1x6meTH3Or8ytdwS64c1PafRLx2j7dItJN3szhsss-bh9YPsggNpBZUGRitgzTG8jkJgpJnsZOXrZdE8nL9cPo7P-rnlJOyNfc0DDI4DswbWMnE2eOjy24lfWGeWJzkxL0cberGZaIC5BIH7Aybe21H514MtoOTD2_-qNyxK6ZhqsIwaHQReJegoV3wteCi7XBm4dzkbRqoCGtFfbRrTvTWZLpe344cFA=w695-h926-no
+label2: <br>  -- AME
+image1: https://lh3.googleusercontent.com/YOqT3KEWvFgclQbEI9Rc55beqop0yphgE3mtw-SRW_ScseTJ6NizM2-0ilg8tAZzENji3xg5RBfHMRn2Ai6cBnvRkU4rJg-ObPYr3M-xRDxxlQuGXW9kF7Z4Xl5rlY178j0AqyxPQk-dWlmdZYPbntqiex_7OrbrCEz7ncy3m687jQ7zDnupk9yFIMTaXK9pixR2zVoRdo7d70F7ha3DiIlikG1Y00FmGD3Ccr7XGUuhUUjM8V7BO373Za03Pp2qlNssLUJ9oEwc54O8z6i8MkzhejeblDzHJDHebkX1S0loDbB3UGQjuJHMryzZmWk5vOuUkw09Z7_gTtp34O4HXGYxmoWTi-YB_Ru2tk-mx3ZNnwNnO8RqHLTf-BXF4I32PVn733CcX1A0I66knuWB4pa1Xltjnc2-Os-DgiFd9eqNi_iA2bvuNrZTbB_go4EkY9Cci0-tU6LiOCIa_olDIlG661hZZCXdYSJA4kcWes7xjON83b14rt0an14pcAKoZnEWvxnHtlgVb2A3TVA7AFBEGUi9j_FoL3ZuKjCbPh4o111jcBum5Mv3uvmawh3DJCY6t0-L8orApdTzOhujRQdBsifMeduOR6OBZt_2tlTLjc4CCbrIW1112yl_JcYBflnVdhaZNvpx5tulkQJ4_ANB4-a2x3Og3PosXh-LR5Z-VKRqds0BbXrCkt0_peaBVh4xq7VfgERfbOGjY817ibQ9=w732-h975-no
 mouse1: Yummmmm. Just do not eat the seeds. 
-image2:
-mouse2:
+image2: 
+mouse2: 
 ---
