--- a/_posts/2019-09-08-557.html
+++ b/_posts/2019-09-08-557.html
@@ -3,9 +3,9 @@ layout: default
 title: August 08, 2019
 number: 557
 label1: Band-tailed Pigeon<br> Black Mountain, BC -- HNE
-label2: <br>  -- AME
+label2: Bracken Fern<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/Owkiz2JWU7wDKw5hHoZqMWw2zzpuhZ2quEG8IgFGTLbnCQKi4k484z2aQ0D2oQw5yI7I8Vz75wX43QoBMO_8VgcurgC9ZTZkEC34VIMulo5I0Jfb435RHMc2NrHvzMW_JcZqMjKdqw=w2400
 mouse1: City pigeons of the forest 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/yzcY2dIgdvdvJ7gthphPLu07hzINmhM8uHS10t90CDzrPHTokAawzIFc1CJSZVdUWXLmtR4C8p6qSWw4rTTr49yafbx9YO68vUYGX5CCkcK9EdqQbULHqQaq7O_E2S8zO4BbnKk1rA=w2400
+mouse2: In autumn attire 
 ---
