--- a/_posts/2019-09-09-558.html
+++ b/_posts/2019-09-09-558.html
@@ -3,9 +3,9 @@ layout: default
 title: August 09, 2019
 number: 558
 label1: Common Raccoon<br> UBC, Vancouver, BC -- HNE
-label2: <br>  -- AME
+label2: View from a white pine of a watershed <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/xatv7nGWFzCrwwKc1MQuizPRHP0mUKO-OiELF16ms4fgfrL8oUuOBIx7aE-kAJz5XapDMfG50F2nyGP7-P5fksVIM2LSInSh0INravsSb43AElLQ0ztaymNDTpIgyeHGUvcFUsmvZA=w2400
 mouse1: Enjoying the first week of class
-image2: 
+image2: https://lh3.googleusercontent.com/h_CtnmfB71BWVpwCjI3QpmVzSzx9uhg2FpSYCOr55dV55qAtmNlojPEAuXo09mucb0gapRYN1BN8igAZnxveS2xq8LUjpfCE4vyiryKehfvtbf-O_A0v4xyw96b2ynM9TnELkNNNsQ=w2400
 mouse2: 
 ---
