--- a/_posts/2019-09-10-559.html
+++ b/_posts/2019-09-10-559.html
@@ -3,9 +3,9 @@ layout: default
 title: August 10, 2019
 number: 559
 label1: Northwestern Crow <br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Brown Creeper<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/fHFNDuJGBYC69Oa1FA1AaNhciIDPQlpzIMXGS5MywOO5UryvoBHuk7pftT7BDX4OJ_3ceMONEl1coXPrLcRhX4w-ViCAuBc--U-A7WKppp0iDDjDtq1CsycWrsN7Jn-Wol7W8ObX8A=w2400
 mouse1: Beachcombing 
-image2: 
+image2: https://lh3.googleusercontent.com/bqM8yr6Hy6jag9HjdL_dRmdtKS7vKlLVzOlrNmEnYoPVXiJfjYOixJfnU5cOb1UGv0zhBlgIYLLHY24Cm6LVQfa0tPawuPtOeBgp-2fN_tvooTuzSKvZsWUHkmhnYbgdIYZuc63w9A=w2400
 mouse2: 
 ---
